syntax = "proto3";
package pb;
//third party libraries
option go_package = "github.com/Mau-MR/cemiac/pb";


message ReceiveMessageReq{
}
message ReceiveMessageRes{
}

service ReceiveService{
  rpc ReceiveMessages(ReceiveMessageReq) returns (ReceiveMessageRes);
}